--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>quest-of-habits-evolve</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Focus Fighter</title>
+    <meta name="description" content="Habit tracking RPG styled game" />
+    <meta name="author" content="Rico Belay" />
 
-    <meta property="og:title" content="quest-of-habits-evolve" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="../focus-fighter-1-28/public/icons/LOGO-B-BG.ico" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
