So i added a guide on how to edit things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Rico Belay" />
 
     <link rel="icon" href="../focus-fighter-1-28/public/icons/LOGO-B-BG.ico" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="../focus-fighter-1-28/public/svg/LOGO-B-BG.svg" />
 
   </head>
 
